Section 'Our news' is done

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
 .introduction .interior-photo {
     width: 100%;
     height: auto;
+    display: block;
 }
 
 .introduction .outer-container {
@@ -144,4 +145,65 @@ body {
     background-color: #ffffff;
     text-decoration: none;
     display: inline-block;
+}
+
+/* section "our-news" styling */
+
+.our-news {
+    background-color: #edeff1;
+    color: #31353e;
+}
+
+.our-news .container {
+    padding: 80px 0 100px;
+    text-align: center;
+}
+
+.our-news .news-heading {
+    font-family: "Roboto Slab", serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0 0 85px;
+}
+
+.our-news .food-articles-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.our-news .food-articles-list li {
+    box-sizing: border-box;
+    width: 33.33%;
+    padding: 0 15px;
+    float: left;
+}
+
+.our-news .food-article img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 40px;
+}
+
+.our-news .food-article h3 {
+    font-family: "Roboto Slab", serif;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0 0 20px;
+}
+
+.our-news .food-article p {
+    line-height: 30px;
+    padding: 0 40px;
+    margin: 0 0 40px;
+}
+
+.our-news .read-more-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #4e5159;
+    padding: 21px 54px;
+    border-radius: 35px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    background-color: #ffffff;
 }
