--- a/css/styles.css
+++ b/css/styles.css
@@ -207,3 +207,80 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.5);
     background-color: #ffffff;
 }
+
+/* section "newsletter" styling */
+
+.newsletter {
+    color: #ffffff;
+    padding: 90px 0;
+    text-align: center;
+    background-image: url("../img/burger-background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.newsletter h2 {
+    font-family: "Roboto Slab", serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0 0 22px;
+}
+
+.newsletter p {
+    max-width: 533px;
+    width: 100%;
+    margin: 0 auto 43px;
+    line-height: 24px;
+}
+
+.newsletter .signup-form {
+    position: relative;
+    max-width: 510px;
+    width: 100%;
+    margin: 0 auto 20px;
+}
+
+.signup-form input[type="email"],
+.signup-form input[type="submit"] {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    font-family: "Roboto Slab", serif;
+    font-size: 18px;
+    font-weight: 400;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 35px;
+}
+
+.signup-form input[type="email"] {
+    box-sizing: border-box;
+    color: #f3f4f6;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 20px 240px 20px 36px;
+}
+
+.signup-form input[type="submit"] {
+    color: #612316;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px 74px;
+    cursor: pointer;
+}
+
+::-webkit-input-placeholder { /* Chrome/Safari */
+    color: #f3f4f6;
+}
+
+::-moz-placeholder { /* Firefox 19+ */
+    color: #f3f4f6;
+}
+
+:-ms-input-placeholder { /* IE 10+ */
+    color: #f3f4f6;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+    color: #f3f4f6;
+}
