--- a/css/styles.css
+++ b/css/styles.css
@@ -447,3 +447,15 @@ body {
     text-decoration: none;
     color: #ffffff;
 }
+
+.read-more-btn,
+.sign-up-btn {
+    transform: scale(1);
+    transition: transform 0.5s;
+}
+
+.read-more-btn:hover,
+.sign-up-btn:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s;
+}
